objects/ssot__FinancialHolding__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangePercent__c</fullName>
        <label>Change Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Currency__c</fullName>
        <label>Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EquityCategory__c</fullName>
        <label>Equity Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialAccountId__c</fullName>
        <label>Financial Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialHoldingClass__c</fullName>
        <label>Financial Holding Class</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialHoldingSubClass__c</fullName>
        <label>Financial Holding Sub Class</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialSecurityId__c</fullName>
        <label>Financial Security</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GainLossAmount__c</fullName>
        <label>Gain Loss Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HoldingCount__c</fullName>
        <label>Holding Count</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Financial Holding Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketValueAmount__c</fullName>
        <label>Market Value Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PurchasePriceAmount__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemIdentifier__c</fullName>
        <label>Source System Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761236824_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FinancialHolding_AccountId_map_Accou_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>FinancialHolding_AccountId_map_Accou_rel</relationshipLabel>
        <relationshipName>rel_1697761236824_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761236895_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FinancialHolding_FinancialAccountId__rel</label>
        <referenceTo>ssot__FinancialAccount__dlm</referenceTo>
        <relationshipLabel>FinancialHolding_FinancialAccountId__rel</relationshipLabel>
        <relationshipName>rel_1697761236895_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761236960_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FinancialHolding_FinancialSecurityId_rel</label>
        <referenceTo>ssot__FinancialSecurity__dlm</referenceTo>
        <relationshipLabel>FinancialHolding_FinancialSecurityId_rel</relationshipLabel>
        <relationshipName>rel_1697761236960_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>